# v4v-socket

./: .gitignore  README.md
test4v/: .gitignore  README  configure.ac
test4v/src/: Makefile.am
test4v/src/common/include/: utils.h
test4v/src/socket-ops/: project-internals.h  project.h  socket-ops-std.c  socket-ops.c  socket-ops.h
v4c/: .gitignore  README  configure.ac
v4c/src/: Makefile.am  project.h  v4c.c  v4c_cli.c  v4c_srv.c
v4v/: .gitignore  Kbuild  v4v.c
v4v/include/linux/: v4v.h
v4v/include/net/: v4v.h
v4v/include/xen/: hypercall6.h  v4v.h
